--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,7 @@ jobs:
             - chains
             - ethereum_common_tests
             - rel
+            - MANA_VERSION
 
   test:
     docker:
