change cookie every release, make cli work with release, debug flags that enable distribution

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,7 @@ jobs:
             - ethereum_common_tests
             - rel
             - MANA_VERSION
+            - COOKIE
 
   test:
     docker:
