Hook up Mana CLI to Release
    This patch adds a Mana CLI and make it available from a release script. The goal of this PR to be able to run:

    * `./mana`
    * `./mana --no-discovery --bootnodes=enode://...`
    * `./mana --no-sync`

    And one day:

    * `./mana --json-rpc`

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ erl_crash.dump
 *.beam
 apps/*/config/dev.exs
 
-/db
+/db/*
 apps/*/db
 
 # Ignore generated code from yecc and leex
@@ -15,3 +15,7 @@ apps/*/db
 
 # Ignore secret files
 apps/blockchain/config/dev.secret.exs
+
+.erlang_cookie
+
+!/**/.gitkeep
