--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,21 +14,21 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
 
@@ -37,23 +37,23 @@ jobs:
           no_output_timeout: 2400
 
       - save_cache:
-          key: v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          key: v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
           paths: "deps"
       - save_cache:
-          key: v11-mix-cache-{{ .Branch }}
+          key: v12-mix-cache-{{ .Branch }}
           paths: "deps"
       - save_cache:
-          key: v11-mix-cache
+          key: v12-mix-cache
           paths: "deps"
 
       - save_cache:
-          key: v11-build-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          key: v12-build-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
           paths: "_build"
       - save_cache:
-          key: v11-build-cache-{{ .Branch }}
+          key: v12-build-cache-{{ .Branch }}
           paths: "_build"
       - save_cache:
-          key: v11-build-cache
+          key: v12-build-cache
           paths: "_build"
 
       - run:
@@ -99,20 +99,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: mix test --exclude pending
 
@@ -133,20 +133,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: EXT_IP_ADDRESS=$(curl ifconfig.co) mix test --only network
 
@@ -167,20 +167,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: mix cmd --app blockchain mix test --exclude test --include Frontier
 
@@ -201,20 +201,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: mix cmd --app blockchain mix test --exclude test --include Homestead
 
@@ -235,20 +235,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: mix cmd --app blockchain mix test --exclude test --include HomesteadToDaoAt5
 
@@ -269,20 +269,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: mix cmd --app blockchain mix test --exclude test --include TangerineWhistle
 
@@ -303,20 +303,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run: mix cmd --app blockchain mix test --exclude test --include SpuriousDragon
 
@@ -337,20 +337,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run:
           command: mix cmd --app blockchain mix test --exclude test --include Byzantium
@@ -373,20 +373,20 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - run:
           command: mix cmd --app blockchain mix test --exclude test --include Constantinople
@@ -410,26 +410,26 @@ jobs:
 
       - restore_cache:
           keys:
-            - v11-build-cache-{{ .Branch }}
-            - v11-build-cache
+            - v12-build-cache-{{ .Branch }}
+            - v12-build-cache
 
       - restore_cache:
           keys:
-            - v11-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v11-mix-cache-{{ .Branch }}
-            - v11-mix-cache
+            - v12-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v12-mix-cache-{{ .Branch }}
+            - v12-mix-cache
 
       - restore_cache:
           keys:
-            - v11-env-cache-{{ arch }}-{{ .Branch }}
-            - v11-env-cache-{{ .Branch }}
-            - v11-env-cache
+            - v12-env-cache-{{ arch }}-{{ .Branch }}
+            - v12-env-cache-{{ .Branch }}
+            - v12-env-cache
 
       - restore_cache:
           keys:
-            - v11-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.lock" }}
-            - v11-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.exs" }}
-            - v11-plt-cache-{{ ".tool-versions" }}
+            - v12-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.lock" }}
+            - v12-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.exs" }}
+            - v12-plt-cache-{{ ".tool-versions" }}
 
       - run:
           name: Unpack PLT cache
@@ -449,17 +449,17 @@ jobs:
             cp ~/.mix/dialyxir*.plt plts/
 
       - save_cache:
-          key: v11-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.lock" }}
+          key: v12-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.lock" }}
           paths:
             - plts
 
       - save_cache:
-          key: v11-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.exs" }}
+          key: v12-plt-cache-{{ ".tool-versions" }}-{{ checksum "mix.exs" }}
           paths:
             - plts
 
       - save_cache:
-          key: v11-plt-cache-{{ ".tool-versions" }}
+          key: v12-plt-cache-{{ ".tool-versions" }}
           paths:
             - plts
 
@@ -515,13 +515,13 @@ jobs:
       - run:
           name: Collecting artifacts
           command: |
-            find -name 'mana.tar.gz' -exec sh -c 'mkdir -p ci_artifact && cp "$@" ci_artifact' _ {} +
+            find -name 'mana.tar.gz' -exec sh -c 'mkdir -p ci_artifact && cp "$@" ci_artifact/ci_artifact_mana.tar.gz' _ {} +
           when: always
 
       - store_artifacts:
           name: Uploading CI artifacts
-          path: ci_artifact/mana.tar.gz
-          destination: ci_artifact
+          path: ci_artifact/ci_artifact_mana.tar.gz
+          destination: ci_artifact_mana.tar.gz
 
 workflows:
   version: 2
