Only cache deps based on mix.lock checksum
If the mix.lock is changed, all dependencies should be re-fetched

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - restore_cache:
           keys:
@@ -31,13 +29,7 @@ jobs:
           no_output_timeout: 2400
 
       - save_cache:
-          key: v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-          paths: "deps"
-      - save_cache:
-          key: v13-mix-cache-{{ .Branch }}
-          paths: "deps"
-      - save_cache:
-          key: v13-mix-cache
+          key: v13-mix-cache-{{ checksum "mix.lock" }}
           paths: "deps"
 
       - save_cache:
@@ -98,9 +90,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: mix test --exclude pending
 
@@ -126,9 +116,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: EXT_IP_ADDRESS=$(curl ifconfig.co) mix test --only network
 
@@ -154,9 +142,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: mix cmd --app blockchain mix test --exclude test --include Frontier
 
@@ -182,9 +168,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: mix cmd --app blockchain mix test --exclude test --include Homestead
 
@@ -210,9 +194,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: mix cmd --app blockchain mix test --exclude test --include HomesteadToDaoAt5
 
@@ -238,9 +220,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: mix cmd --app blockchain mix test --exclude test --include TangerineWhistle
 
@@ -266,9 +246,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run: mix cmd --app blockchain mix test --exclude test --include SpuriousDragon
 
@@ -294,9 +272,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - run:
           command: mix cmd --app blockchain mix test --exclude test --include Byzantium
@@ -324,9 +300,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{ checksum "mix.lock" }}
 
       - run:
           command: mix cmd --app blockchain mix test --exclude test --include Constantinople
@@ -355,9 +329,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v13-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-            - v13-mix-cache-{{ .Branch }}
-            - v13-mix-cache
+            - v13-mix-cache-{{ checksum "mix.lock" }}
 
       - restore_cache:
           keys:
