--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
             - ethereum_common_tests
             - rel
             - MANA_VERSION
+            - priv
 
   test:
     docker:
@@ -379,6 +380,12 @@ jobs:
           command: |
             find -name 'mana.tar.gz' -exec sh -c 'mkdir -p ci_artifact && cp "$@" ci_artifact/ci_artifact_mana.tar.gz' _ {} +
           when: always
+      - run:
+          name: Build and run tests
+          command: |
+            cd priv/itest/
+            mix escript.build
+            ./itest
 
       - store_artifacts:
           name: Uploading CI artifacts
