simple escript that starts a release and performs tests (#712)
* simple escript that starts a release and performs tests

* run tests against the release in CI

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ apps/blockchain/config/dev.secret.exs
 
 !/**/.gitkeep
 /log/*
+#release testing tool
+/priv/itest/_build
+/priv/itest/_build/itest
+/priv/itest/itest
